# robotpy-navx

./: .gitignore  .gittrack  .readthedocs.yml  .travis.yml  README.rst  meson.build  pyproject.toml  setup.py
.github/workflows/: dist.yml  scan.yml
docs/: .gitignore  Makefile  api.rst  conf.py  index.rst  requirements.txt  setup.py
examples/basic/: robot.py
examples/rotate-to-angle/: robot.py
examples/rotate-to-angle-arcade/: robot.py
navx/: __init__.py  ahrs.py  continuousangletracker.py  inertialdataintegrator.py  offsettracker.py  pins.py  registerio.py  registerio_i2c.py  registerio_spi.py  types.py
navx/_impl/: __init__.py  ahrsprotocol.py  crc7.py  imuprotocol.py  imuregisters.py  sim_io.py
navx/src/: 0001-Fix-C-simulation.patch  ahrs.h.patch  sources.patch
navx/src/rpy/: AHRS.cpp.inl  navx.cpp
semiwrap/: AHRS.yml  NavX.yml
tests/: run_tests.sh  test_navx.py
