[build-system]
requires = [
    "robotpy-build<2025.0.0b1,~=2025.0.0a1",
    "robotpy-wpiutil~=2025.0.0b2",
    "robotpy-wpimath~=2025.0.0b2",
    "wpilib~=2025.0.0b2",
]

[tool.robotpy-build]
base_package = "navx"

[tool.robotpy-build.metadata]
name = "robotpy-navx"
description = "Python wrapper for KauaiLabs NavX sensor"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-navx"
license = "BSD-3-Clause"
install_requires = [
    "robotpy-wpiutil~=2025.0.0b2",
    "robotpy-wpimath~=2025.0.0b2",
    "wpilib~=2025.0.0b2",
]

[tool.robotpy-build.static_libs."studica_driver".maven_lib_download]
artifact_id = "Studica-driver"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2025"
version = "2025.1.1-beta-3"
libs = ["StudicaDriver"]

[tool.robotpy-build.static_libs."studica_lib".maven_lib_download]
artifact_id = "Studica-cpp"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2025"
version = "2025.1.1-beta-3"
libs = ["Studica"]

[tool.robotpy-build.wrappers."navx"]
name = "navx"
depends = [
    "wpilib_core",
    "wpimath_cpp",
    "wpimath_geometry",
    "wpiHal",
    "wpilibc",
    "wpilib_core",
    "wpimath_cpp",
    "wpimath_geometry",
    "wpiHal",
    "ntcore",
    "wpiutil",
    "studica_driver",
    "studica_lib",
]

sources = [
    "navx/src/rpy/navx.cpp"
]

generate = [
    { AHRS = "studica/AHRS.h" },
]
generation_data = "gen"
