[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-vcs",
    "semiwrap~=0.1",
    "hatch-meson~=0.1.0b2",
    "hatch-robotpy~=0.2.0",
    "wpilib~=2025.3.2.2",
]


[project]
name = "robotpy-navx"
dynamic = ["version"]
description = "Python wrapper for Studica NavX sensor"
license = "BSD-3-Clause"
dependencies = [
    "wpilib~=2025.3.2.2",
]

[[project.authors]]
name = "RobotPy Development Team"
email = "robotpy@googlegroups.com"

[project.urls]
"Source code" = "https://github.com/robotpy/robotpy-navx"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "navx/version.py"

[tool.hatch.build.targets.wheel]
packages = ["navx"]


[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "Studica-cpp"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2025"
version = "2025.0.1"
staticlibs = ["Studica"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "Studica-driver"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2025"
version = "2025.0.1"
staticlibs = ["StudicaDriver"]
extract_to = "lib"


[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]


[tool.semiwrap]
update_init = ["navx"]

[tool.semiwrap.extension_modules."navx._navx"]
name = "navx"

depends = [
    "wpilib",
]

includes = [
    "lib/include"
]

[tool.semiwrap.extension_modules."navx._navx".headers]
AHRS = "studica/AHRS.h"
