[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
    "hatch-vcs",
    "semiwrap~=0.1",
    "hatch-meson~=0.1.0b2",
    "hatch-robotpy~=0.2.0",
    "wpilib~=2026.1.1b1",
]


[project]
name = "robotpy-navx"
dynamic = ["version"]
description = "Python wrapper for Studica NavX sensor"
license = "BSD-3-Clause"
dependencies = [
    "wpilib~=2026.1.1b1",
]

[[project.authors]]
name = "RobotPy Development Team"
email = "robotpy@googlegroups.com"

[project.urls]
"Source code" = "https://github.com/robotpy/robotpy-navx"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "navx/version.py"

[tool.hatch.build.targets.wheel]
packages = ["navx"]


[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "Studica-cpp"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2026"
version = "2026.0.0-beta"
staticlibs = ["Studica"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "Studica-driver"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2026"
version = "2026.0.0-beta"
staticlibs = ["StudicaDriver"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "StudicaLib-cpp"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2026"
version = "2026.0.1-beta"
staticlibs = ["StudicaLib"]
extract_to = "lib"

[[tool.hatch.build.hooks.robotpy.maven_lib_download]]
artifact_id = "StudicaLib-driver"
group_id = "com.studica.frc"
repo_url = "https://dev.studica.com/maven/release/2026"
version = "2026.0.1-beta"
staticlibs = ["StudicaLibDriver"]
extract_to = "lib"


[tool.hatch.build.hooks.semiwrap]

[tool.hatch.build.hooks.meson]


[tool.semiwrap]
update_init = ["navx"]
scan_headers_ignore = ["*"]


[tool.semiwrap.extension_modules."navx._navx"]
name = "navx"

depends = [
    "wpilib",
]

includes = [
    "lib/include"
]

[tool.semiwrap.extension_modules."navx._navx".headers]
AHRS = "studica/AHRS.h"
NavX = "studica/Navx.h"
